--- a/Ratala-POS-System-Web/backend/.env.example
+++ b/Ratala-POS-System-Web/backend/.env.example
@@ -3,3 +3,7 @@ DATABASE_URL=postgresql://user:password@localhost:5432/db_name
 SECRET_KEY=generate_a_secure_random_key_here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Email Configuration for OTP
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password_here
