--- a/dautari_adda/pubspec.yaml
+++ b/dautari_adda/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   image_picker: ^1.2.1
   path_provider: ^2.1.5
   share_plus: ^12.0.1
+  flutter_thermal_printer: ^1.2.4
+  esc_pos_utils_plus: ^2.0.4
 
 dev_dependencies:
   flutter_test:
