--- a/dautari_adda/pubspec.yaml
+++ b/dautari_adda/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   share_plus: ^12.0.1
   flutter_thermal_printer: ^1.2.4
   esc_pos_utils_plus: ^2.0.4
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
