Refactor POS and Inventory modules for Flutter app and backend
- Fixed backend logic to only change table status for Dine-in orders.
- Isolated Dine-in, Takeaway, and Delivery orders in Flutter POS UI using tabs.
- Added customer and delivery partner names to all relevant screens (Orders, Cashier, Bill, Overview).
- Enhanced Inventory module with Stock Management, Counts, and BOM sub-screens.
- Added DayBook and Sales Summary to Reports.
- Updated brand assets (logo) and API configuration to production URL.
- Improved UI/UX consistency across management screens.

--- a/dautari_adda/pubspec.yaml
+++ b/dautari_adda/pubspec.yaml
@@ -111,5 +111,5 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/dautari-logo.png"
+  image_path: "assets/images/app-logo.png"
   min_sdk_android: 21
