--- a/Ratala-POS-System-Web/backend/.env.example
+++ b/Ratala-POS-System-Web/backend/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env and fill in your actual values
 
 # Database Configuration
-DATABASE_URL=postgresql://postgres:password@localhost:5432/pos_system
+DATABASE_URL=postgresql://postgres:password@localhost:5432/system
 
 # Security Settings
 SECRET_KEY=generate_a_secure_random_key_here
